--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,11 @@
                         +38 096 111 11 11</a>
                 </li>
             </ul>
+            <button type="button" class="burger-btn" data-menu-open>
+                <svg class="burger-btn__icon" width="24" height="16">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
         </div>
     </header>
 
