--- a/portfolio.html
+++ b/portfolio.html
@@ -477,6 +477,52 @@
         </div>
     </footer>
 
+        <!-- MOBILE-MENU -->
+        <div class="mobile-menu" data-menu>
+            <div class="container-mobile">
+                <button type="button" class="close-btn mobile-btn" data-menu-close>
+                    <svg class="close-black" width="18" height="18">
+                        <use href="./images/icons.svg#icon-close-black"></use>
+                    </svg>
+                </button>
+                <ul class="mobile-menu-list">
+                    <li class="mobile-menu-list__item">
+                        <a href="./index.html" class="mobile-menu-list__link mobile-list__link--active link">Студия</a>
+                    </li>
+                    <li class="mobile-menu-list__item">
+                        <a href="./portfolio.html" class="mobile-menu-list__link link">Портфолио</a>
+                    </li>
+                    <li class="mobile-menu-list__item">
+                        <a href="" class="mobile-menu-list__link link">Контакты</a>
+                    </li>
+                </ul>
+                <ul class="mobile-contact-list">
+                    <li class="mobile-contact-list__item">
+                        <a href="tel:+380961111111" class="mobile-contact-list__link tel link">+38 096 111 11 11</a>
+                    </li>
+                    <li class="mobile-contact-list__item">
+                        <a href="mailto:info@devstudio.com" class="mobile-contact-list__link mail link">info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="mobile-social-list">
+                    <li class="mobile-social-list__item">
+                        <a href="" class="mobile-social-list__link link">Instagram</a>
+                    </li>
+                    <li class="mobile-social-list__item">
+                        <a href="" class="mobile-social-list__link link">Twitter</a>
+                    </li>
+                    <li class="mobile-social-list__item">
+                        <a href="" class="mobile-social-list__link link">Facebook</a>
+                    </li>
+                    <li class="mobile-social-list__item">
+                        <a href="" class="mobile-social-list__link link">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
+        <script src="./js/menu.js"></script>
+
 </body>
 
 </html>
